--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "update": "bin/update-script"
+    "snapshot": "bin/snapshot-script",
+    "install": "bin/install-script"
   },
-  "author": "",
+  "author": "Phil Gray",
   "license": "ISC"
 }
